# Mergence---ECCM

./: pyproject.toml  requirements.txt
app/: streamlit_app.py
mergence_eccm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
metrics/: eccm.py  epc.py
models/: eccm_weights.json  epc_model.pkl  epc_model_churn.pkl  epc_model_fraud.pkl
models/churn/: churn_v00.pkl  churn_v01.pkl  churn_v02.pkl  churn_v03.pkl  churn_v05.pkl  churn_v06.pkl  churn_v10.pkl  churn_v100.pkl  churn_v101.pkl  churn_v102.pkl  churn_v103.pkl  churn_v104.pkl  churn_v11.pkl  churn_v16.pkl  churn_v20.pkl  churn_v21.pkl  metadata.json
models/fraud/: fraud_v00.pkl  fraud_v01.pkl  fraud_v02.pkl  fraud_v03.pkl  fraud_v04.pkl  fraud_v05.pkl  fraud_v06.pkl  fraud_v07.pkl  fraud_v08.pkl  fraud_v09.pkl  fraud_v10.pkl  fraud_v100.pkl  fraud_v101.pkl  fraud_v102.pkl  fraud_v103.pkl  fraud_v104.pkl  fraud_v11.pkl  fraud_v12.pkl  fraud_v13.pkl  fraud_v14.pkl  fraud_v15.pkl  fraud_v16.pkl  fraud_v18.pkl  fraud_v20.pkl  fraud_v21.pkl  fraud_v22.pkl  metadata.json
notebooks/: baseline_benchmark_comparison.ipynb
scripts/: merge_and_evaluate.py  merge_with_m2n2.py  run_xai_global.py  select_top_pairs.py  train_churn_models.py  train_epc.py  train_fraud_models.py  xai_explanantions.py
tests/: conftest.py  test_epc.py  test_merge_pipeline.py  test_metric_and_eccm.py  test_streamlit.py
