[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mergence-eccm"
version = "0.1.0"
description = "Model compatibility evaluation and fusion optimization"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["metrics", "scripts"]
